2005-03-14  Mark McLoughlin  <mark@skynet.ie>

	* admin-tool/userswindow.py: add cheesy UI which uses
	userdb.py

2005-03-14  Mark McLoughlin  <markmc@redhat.com>

	* lib/userdb.py: add stub for DV to hack on.

Sun Mar 13 08:11:04 CET 2005 Daniel Veillard <veillard@redhat.com>

	* po/POTFILES.in: added admin-tool/fileviewer.py

2005-03-11  Mark McLoughlin  <markmc@redhat.com>

	* admin-tool/sabayon.png: new icon from Diana.

2005-03-11  Mark McLoughlin  <markmc@redhat.com>

	* lib/userprofile.py:
	(SourceDelegate.sync_changes),
	(SourceDelegate.apply): add stubs for these delegate
	methods.
	(UserProfile.apply): invoke sync_changes() on each
	of the delegates after invoking it on the source.
	
	* lib/sources/mozillasource.py:
	(MozillaDelegate.sync_changes),
	(MozillaDelegate.commit_change),
	(MozillaDelegate.apply): add empty stubs.
	
	* lib/sources/paneldelegate.py:
	(PanelDelegate.sync_changes): add empty stub.

Thu Mar 10 16:39:38 CET 2005 Daniel Veillard <veillard@redhat.com>

	* doc/site.xsl doc/*.html: updated the source tarball download link

2005-03-10  Mark McLoughlin  <markmc@redhat.com>

	* configure.ac: post-release bump to 0.16.

==================== 0.15 ====================

2005-03-10  Mark McLoughlin  <markmc@redhat.com>

	* configure.in: Version 0.15.
	
2005-03-10  Mark McLoughlin  <markmc@redhat.com>

	* admin-tool/fileviewer.py: an even cheesier
	text file viewer to go along with the cheesy
	GConf viewer.
	
	* admin-tool/Makefile.am: add fileviewer.py
	
	* admin-tool/editorwindow.py: hook it up.

2005-03-09  Mark McLoughlin  <markmc@redhat.com>

	* admin-tool/gconfviewer.py: cheesy view-only
	gconf-editor type thing.
	
	* admin-tool/Makefile.am: add gconfviewer.py
	
	* admin-tool/editorwindow.py: show the GConf
	viewer when a GConf element is activated.
	
	* lib/sources/gconfsource.py: fix silly.

2005-03-09  Mark McLoughlin  <markmc@redhat.com>
	
	* lib/userprofile.py:
	(ProfileSource.get_path_description): add stub for